--- a/CV.tex
+++ b/CV.tex
@@ -96,42 +96,60 @@
   \begin{tikzpicture}[remember picture, overlay] 
     \node[anchor = north west] at ($(current page.north west)+(0.5cm,+1.0cm)$) {\includegraphics[height=6cm]{zju.png}};
   \end{tikzpicture}%
-\centerline{\LARGE\bfseries{徐贺}} 
+\centerline{\LARGE\bfseries{胡豆}} 
 
-\centerline{\normalsize{\faPhone\ 19137168089 \quad \faEnvelopeO\ \href{mailto:3230104648@zju.edu.cn}{3230104648@zju.edu.cn}}} 
+\centerline{\normalsize{\faPhone\ 111-1111-1111 \quad \faEnvelopeO\ \href{mailto:3230100000@zju.edu.cn}{3230100000@zju.edu.cn}}} 
 
 \centerline{\normalsize{\faGithubSquare\ \href{https://github.com/maksymilan}{https://github.com/maksymilan} \quad \faRssSquare\ \href{https://maksymilan.github.io/}{https://maksymilan.github.io}}} 
     
 \section{\makebox[\widthof{\faGraduationCap}][c]{\color{CVBlue}\faGraduationCap}\ 教育背景}    
 \textbf{浙江大学} \hfill 2023.9 -- 至今\\[0.5em] % 标题和正文间加一点距离
-图灵班人工智能专业\quad 大三 
+CC98烂坑挖掘工程与技术\quad 大二 
 \begin{itemize}[nosep]
-    \item 相关课程：《线性代数(H)》、《高级数据结构与算法分析》、《面向对象程序设计》、 《计算机视觉导论》
+    \item 相关课程：《烂坑挖掘及基础》、《高级挖坑技巧》、《烂坑数理统计》
 \end{itemize}
 
-\section{\makebox[\widthof{\faUsers}][c]{\color{CVBlue}\faUsers}\ 经历}
+\section{\makebox[\widthof{\faUsers}][c]{\color{CVBlue}\faUsers}\ 项目经历}
 
 % --- 第一个项目 ---
 % 将标题行末尾的 \\ 替换为 \titlebreak 命令
-{计算机辅助蛋白质设计} \hfill 2025.03 -- 至今 \titlebreak
-本人与2025年3月进入浙江大学药学院侯廷军老师实验室进行AI For Science的科研学习，之后我在师兄指导下进行计算机辅助蛋白质设计的科研项目实践，具体内容为对现有的从头蛋白质设计方法RSO进行改良，使其由原来的优化logits表示改为全程优化embedding，从而避免丢失过多信息，期望得到更好的设计结果。项目暂未有产出。}。
+\textbf{98烂坑风控与可视化作战平台} \hfill 2024.08 -- 至今 \titlebreak
+项目描述：为维护cc98社区的讨论纯度、净化“心灵之约”版块风气，本项目旨在对“烂坑”进行科学、严谨的量化分析，并引入\textbf{大语言模型(LLM)}对烂坑帖进行\textbf{自动化情感极性与“离谱指数”标注}。
+% 在 itemize 的选项中，使用 topsep=\intraProjectListTopSep 来控制上边距
+\begin{itemize}[nosep, topsep=\intraProjectListTopSep]
+    \item \textbf{数据与后端}：运用 \textbf{Go} 语言及 \textbf{GORM} 框架，实现对全站“烂坑”帖的7x24小时全天候\textbf{抓取}与\textbf{入库}(MySQL)。
+    \item \textbf{可视化前端}：采用原生 \textbf{HTML/CSS/JS} 构建了“烂坑”实时监控\textbf{作战大屏}。实现了坑主成分分析、挖坑热力图、年度烂坑王榜单等\textbf{可视化图表}，并通过 \textbf{AJAX} 异步刷新，确保数据洞察的实时性。
+    \item \textbf{核心产出}：全面掌握了从\textbf{数据采集、清洗、LLM标注到可视化分析}的“反烂坑”全链路技术。
+\end{itemize}
+
+% 使用 \projectsep 命令来分隔两个项目
+\projectsep
+
+% --- 第二个项目 ---
+\textbf{AIGC驱动的超进化自动挖坑机 (Agent)} \hfill 2025.02 -- 至今 \titlebreak
+项目描述：为探索心灵版规的边界，以及测试版主锁沉反应速度的极限，本项目基于\textbf{多智能体协作(MCP)与LLM}技术，开发了一款能\textbf{自主“挖坑”与“互坑”}的AI Agent。
+\begin{itemize}[nosep, topsep=\intraProjectListTopSep]
+    \item \textbf{并发与调度}：后端采用 \textbf{Go} 语言，充分利用 \textbf{Goroutine} 和 \textbf{Channel} 的高并发模型，模拟\textbf{用户并发在线}，执行定时挖坑，确保挖坑行动的\textbf{隐蔽性}与\textbf{高效性}。
+    \item \textbf{实时监控与响应}：运用 \textbf{WebSocket} 协议实现了对目标帖子的\textbf{实时监听与交互}。确保在烂坑被识破的第一时间，Agent能光速完成\textbf{“lktp”}或\textbf{反向钓鱼}操作，展现出极高的AI博弈能力。
+    \item \textbf{可视化GUI}：前端使用 \textbf{React} 框架构建了\textbf{后台管理的可视化面板 (Admin Panel)}。可一键下达挖坑指令、动态调整Agent的\textbf{指令}、并实时监控数据。
+\end{itemize}
 
 \section{\makebox[\widthof{\faCogs}][c]{\color{CVBlue}\faCogs}\ 技术栈}
 \begin{itemize}[nosep]
-    \item \textbf{编程语言：} C, Python, C++, verilog 
+    \item \textbf{编程语言：} \textbf{Go}, Python, C++
+    \item \textbf{开发工具：} SSH, Git, Vim, MakeFile,LaTex
+    \item \textbf{操作系统：} Linux
 \end{itemize}
 \section{\makebox[\widthof{\faGraduationCap}][c]{\color{CVBlue}\faList}\ 获奖情况}
 \begin{itemize}
-    \item 2023-2024学年 校设奖学金 浙江大学一等奖学金 \hfill 2024.11
-    \item 2024-2025学年 校设奖学金 浙江大学三等奖学金 \hfill 2023.10
-    \item 第13届中国大学生龙舟锦标赛 100米直道/男甲 第五名 \hfill 2025.09
-    \item 2023-2024学年 优秀学生 \hfill 2024.10
-    
+    \item CC98年度用户 \hfill 2023.12
     
 \end{itemize}
     
 \section{\makebox[\widthof{\faInfo}][c]{\color{CVBlue}\faInfo}\ 其他}
 \begin{itemize}[parsep=0.5ex]
+    \item \textbf{技术博客：} \href{https://maksymilan.github.io/}{https://maksymilan.github.io/}
+    \item \textbf{GitHub：} \href{https://github.com/maksymilan}{https://github.com/maksymilan} 
     \item \textbf{英语水平：} CET-4, CET-6
 \end{itemize}
 \end{document}
