Add awards and scholarships to CV

--- a/CV.tex
+++ b/CV.tex
@@ -120,7 +120,10 @@
 \end{itemize}
 \section{\makebox[\widthof{\faGraduationCap}][c]{\color{CVBlue}\faList}\ 获奖情况}
 \begin{itemize}
-    \item CC98年度用户 \hfill 2023.12
+    \item 2023-2024学年 校设奖学金 浙江大学一等奖学金 \hfill 2024.11
+    \item 2024-2025学年 校设奖学金 浙江大学三等奖学金 \hfill 2025.10
+    \item 第13届中国大学生龙舟锦标赛 100米直道/男甲 第五名 \hfill 2025.9
+    \item 2023-2024学年 优秀学生 \hfill 2024.10
     
 \end{itemize}
     
