--- a/CV.tex
+++ b/CV.tex
@@ -100,7 +100,7 @@
 \textbf{浙江大学} \hfill 2023.8 -- 至今\\[0.5em] % 标题和正文间加一点距离
 图灵班人工智能\quad 大三 
 \begin{itemize}[nosep]
-    \item 相关课程：《线性代数》、《高级数据结构与算法分析》、《面向对象程序设计》、 《计算机视觉导论》
+    \item 相关课程：《程序设计与算法基础》 5.0/5.0、《线性代数》 4.2/5.0、《计算机系统Ⅲ》 5.0/5.0、 《计算机视觉导论》
 \end{itemize}
 
 \section{\makebox[\widthof{\faUsers}][c]{\color{CVBlue}\faUsers}\ 科研学习经历}
@@ -108,7 +108,7 @@
 % --- 第一个项目 ---
 % 将标题行末尾的 \\ 替换为 \titlebreak 命令
 {计算机辅助蛋白质设计} \hfill 2025.08 -- 至今 \titlebreak
-具体经历：本人与2025年3月进入浙江大学药学院侯廷军老师实验室进行AI For Science相关学习，并与2025年8月开始在师兄指导下进行计算机辅助蛋白质设计的相关科研。科研具体内容为在现有从头蛋白质设计方法RSO基础上进行进一步探索，将原本的在logits表示上进行优化的方法改为在embedding表示上进行优化。项目暂未取得产出。
+具体经历：本人与2025年3月进入浙江大学药学院侯廷军老师实验室进行AI For Science相关学习，并与2025年8月开始在师兄指导下进行计算机辅助蛋白质设计的相关科研。科研具体内容为在现有从头蛋白质设计方法RSO基础上进行进一步探索，将原本的在logits表示上进行优化的方法改为在embedding表示上进行优化。项目锻炼了我的论文阅读能力、代码阅读与编写能力，使我对科研有了一定的基础认识，并积攒了一定的经验。
 
 \section{\makebox[\widthof{\faCogs}][c]{\color{CVBlue}\faCogs}\ 技术栈}
 \begin{itemize}[nosep]
